Optimizing images size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
 
-  <div id="home" class="home">
+  <div id="home" class="section home">
     <div class="centered">
       <h1>ORCID CASRAI<br /> 2015 Codefest <br />Barcelona, Spain</h1>
       <a href="#when" class="custom-buttom">Read more</a>
@@ -48,13 +48,13 @@
 
 
   <!-- WHEN SECTION -->
-  <div id="when" class="pad-section">
+  <div id="when" class="section pad-section">
     <div class="container">
       <h2 class="text-center">When</h2>
       <div class="row">
           <div class="col-sm-12 col-xs-12">
               <div class="dates">
-                <div class="date">
+                <div class="date wow flipInX">
                     <div class="month">
                       MAY
                     </div>
@@ -62,7 +62,7 @@
                       23
                     </div>
                 </div>
-                <div class="date">
+                <div class="date wow flipInX">
                     <div class="month">
                       MAY
                     </div>
@@ -79,10 +79,11 @@
 
   <div id="schedule" class="pad-section">
       <div class="container">
-      <h2 class="text-center white">schedule</h2> <hr />
+      <h2 class="text-center white">schedule</h2>
+      <hr class="wow fadeIn"/>
       <div class="row text-center">
         <div class="col-sm-6 col-xs-12">
-          <table class="table">
+          <table class="table wow slideInLeft">
             <thead>
               <tr>
                 <td>May 23rd</td>
@@ -110,7 +111,7 @@
           </table>
         </div>
         <div class="col-sm-6 col-xs-12">
-          <table class="table">
+          <table class="table wow slideInRight">
             <thead>
               <tr>
                 <td>May 24th</td>
@@ -141,7 +142,7 @@
 
   </div>
   
-  <div id="where">
+  <div id="where" class="section">
     <div class="title">
       <h2 class="blue">where</h2>
     </div>
@@ -153,7 +154,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-sm-12">
-          <p>
+          <p class="wow slideInRight">
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
            </p>
         </div>
@@ -161,18 +162,18 @@
     </div>
   </div>
   
-  <div id="who" class="pad-section">
+  <div id="who" class="pad-section section">
     <h2 class="text-center white">who</h2>
     <div class="container">
         <div class="row text-center">
           <div class="col-sm-12">
-            <p class="white">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you. Contact information (not required)</p>
+            <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you. Contact information (not required)</p>
           </div>
         </div>
     </div>
   </div>
   
-  <div id="sponsors" class="pad-section">
+  <div id="sponsors" class="pad-section section">
     <h2 class="text-center blue">Sponsor</h2>
     <div class="container">
       <div class="rowtext-center">
