--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse-main">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#home">What</a></li>
-          <li><a href="#when">When</a></li>
-          <li><a href="#where">Where</a></li>
-          <li><a href="#why">Why</a></li>
-          <li><a href="#who">Who</a></li>
+          <li><a href="#" data-section="home">What</a></li>
+          <li><a href="#" data-section="when">When</a></li>
+          <li><a href="#" data-section="where">Where</a></li>
+          <li><a href="#" data-section="why">Why</a></li>
+          <li><a href="#" data-section="who">Who</a></li>
         </ul>
       </div>
 
