add some details

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
   <div id="home" class="section home">
     <div class="centered">
       <h1>ORCID CASRAI<br /> 2015 Codefest <br />Barcelona, Spain</h1>
+          <p class="wow slideInRight animated" style="visibility: visible;">
+          Runs during the ORCID-CASRAI Outreach Event, feel free to drop in
+          and out to attend conference sessions.<br /> 
+          </p>
+      <br />
       <a href="#when" class="custom-buttom">Read more</a>
     </div>
   </div>
@@ -59,7 +64,7 @@
                       MAY
                     </div>
                     <div class="day">
-                      23
+                      18
                     </div>
                 </div>
                 <div class="date wow flipInX">
@@ -67,7 +72,7 @@
                       MAY
                     </div>
                     <div class="day">
-                      24
+                      19
                     </div>
                 </div>  
               </div>
@@ -82,64 +87,85 @@
       <h2 class="text-center white">schedule</h2>
       <hr class="wow fadeIn"/>
       <div class="row text-center">
-        <div class="col-sm-6 col-xs-12">
+        <div class="col-sm-4 col-xs-8">
           <table class="table wow slideInLeft">
             <thead>
               <tr>
-                <td>May 23rd</td>
-                <td></td>
+                <td class="col-sm-4 col-xs-8">May 18rd</td>
               </tr>
             </thead>
             <tbody>
               <tr>
+                <td>11:00</td>
+                <td>Introductions & Welcome</td>
+              </tr>
+              <tr>
                 <td>12:00</td>
-                <td>Free snaks!</td>
-              </tr>
-              <tr>
-                <td>01:00</td>
                 <td>Free lunch!</td>
               </tr>
               <tr>
-                <td>02:00</td>
+                <td>04:00</td>
                 <td>Free snaks!</td>
               </tr>
               <tr>
-                <td>03:00</td>
-                <td>Free lunch!</td>
+                <td>06:30</td>
+                <td>Pizza Beer time!</td>
+              </tr>
+              <tr>
+                 <td>07:00</td>
+                 <td>Standup and Share</td>   
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-sm-6 col-xs-12">
+        <div class="col-sm-4 col-xs-8">
           <table class="table wow slideInRight">
             <thead>
               <tr>
-                <td>May 24th</td>
-                <td></td>
+                <td class="col-sm-4 col-xs-8">May 19th</td>
               </tr>
             </thead>
             <tbody>
               <tr>
+                <td>9:00</td>
+                <td>Introductions & Welcome</td>
+              </tr>
+              <tr>
+                <td>11:00</td>
+                <td>Standup and Share</td>
+              </tr>
+              <tr>
                 <td>12:00</td>
-                <td>Free snaks!</td>
+                <td>Lunch</td>
               </tr>
               <tr>
-                <td>01:00</td>
-                <td>Free lunch!</td>
+                <td>04:00</td>
+                <td>Last push</td>
               </tr>
               <tr>
-                <td>02:00</td>
-                <td>Free pizza!</td>
+                <td>05:00</td>
+                <td>Present to Judges</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-sm-4 col-xs-8">
+          <table class="table wow slideInRight">
+            <thead>
+              <tr>
+                <td class="col-sm-4 col-xs-8">May 20th</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>11:00</td>
+                <td>Winners announced at conference and prizes awarded.</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
     </div>
-
-
-
-
   </div>
   
   <div id="where" class="section">
@@ -189,7 +215,7 @@
   <footer>
     <hr />
     <div class="container">
-      <p class="text-right">Copyright &copy; ORCiD 2015</p>
+      <p class="text-right">Copyright &copy; ORCID CASERAI 2015</p>
     </div>
   </footer>
  
