add links and address

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="centered">
       <h1>ORCID CASRAI<br /> 2015 Codefest <br />Barcelona, Spain</h1>
           <p class="wow slideInRight animated" style="visibility: visible;">
-          Runs during the ORCID-CASRAI Outreach Event, feel free to drop in
-          and out to attend conference sessions.<br /> 
+          Runs during the <a href="http://orcid-casrai-2015.org/">ORCID CASRAI Outreach Event</a>, feel free to drop in
+          and out to attend event sessions.<br /> 
           </p>
       <br />
       <a href="#when" class="custom-buttom">Read more</a>
@@ -74,11 +74,12 @@
                     <div class="day">
                       19
                     </div>
-                </div>  
+                </div> 
               </div>
             </div>
           </div>
       </div>
+      <h4 class="text-center">Awards announced the 20th at Outreach Event.</h4>
     </div>
   </div>
 
@@ -193,9 +194,44 @@
     <div class="container">
         <div class="row text-center">
           <div class="col-sm-12">
-            <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you. Contact information (not required)</p>
+            <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you.</p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-12 col-xs-12">
+          <table class="table wow slideInRight">
+            <thead>
+              <tr>
+                <th>Name (or Alias)</th>
+                <th>Title and Organization</th>
+                <th>GitHub name (optional)</th>
+                <th>Notes (like projects and preferred languages)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Liz Krznarich</td>
+                <td>Member Services Associate ORCID</td>
+                <td>lizkrznarich</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Laura Paglione</td>
+                <td>Director of Technology</td>
+                <td>lpaglione</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Robert Peters</td>
+                <td>Lead Developer ORCID</td>
+                <td>rcpeters</td>
+                <td>CVS file to ORCID iD creation. Any language.</td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   
