--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href="#" data-section="where">Where</a></li>
           <li><a href="#" data-section="why">Why</a></li>
           <li><a href="#" data-section="who">Who</a></li>
+          <li><a href="https://github.com/ORCID-CASRAI-2015" target="_blank" data-section="git">Git Repo</a></li>
         </ul>
       </div>
 
