--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <table class="table wow slideInLeft">
             <thead>
               <tr>
-                <td class="col-sm-4 col-xs-8">May 18rd</td>
+                <td class="col-sm-4 col-xs-8">May 18th</td>
               </tr>
             </thead>
             <tbody>
@@ -130,7 +130,7 @@
             <tbody>
               <tr>
                 <td>9:00</td>
-                <td>Introductions & Welcome</td>
+                <td>Coffee and coding</td>
               </tr>
               <tr>
                 <td>11:00</td>
@@ -138,14 +138,14 @@
               </tr>
               <tr>
                 <td>12:00</td>
-                <td>Lunch</td>
+                <td>Lunch, yum!</td>
               </tr>
               <tr>
                 <td>04:00</td>
-                <td>Last push</td>
+                <td>Last push.</td>
               </tr>
               <tr>
-                <td>05:00</td>
+                <td>05:30</td>
                 <td>Present to Judges</td>
               </tr>
             </tbody>
