--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   <footer>
     <hr />
     <div class="container">
-      <p class="text-right">Copyright &copy; ORCID CASERAI 2015</p>
+      <p class="text-right">Copyright &copy; ORCID CASRAI 2015</p>
     </div>
   </footer>
  
