--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </tr>
               <tr>
                 <td>04:00</td>
-                <td>Free snaks!</td>
+                <td>Cookie time.</td>
               </tr>
               <tr>
                 <td>06:30</td>
@@ -142,7 +142,7 @@
               </tr>
               <tr>
                 <td>04:00</td>
-                <td>Last push.</td>
+                <td>Last push, yikes.</td>
               </tr>
               <tr>
                 <td>05:30</td>
