--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
     </div>
   </nav>
 
-  <div id="home" class="section home">
+  <div id="home">
+    
     <div class="centered">
-      <h1>ORCID CASRAI<br /> 2015 Codefest <br />Barcelona, Spain</h1>
-          <p class="wow slideInRight animated" style="visibility: visible;">
-          Runs during the <a href="http://orcid-casrai-2015.org/">ORCID CASRAI Outreach Event</a>, feel free to drop in
-          and out to attend event sessions.<br /> 
-          </p>
-      <br />
-      <a href="#when" class="custom-buttom">Read more</a>
+      <h1>ORCID <span class="orange">CASRAI</span><br /><span class="orange">2015</span> Codefest <br />Barcelona, Spain</h1>
+          <p class="wow slideInRight">
+          Runs during the <a href="http://orcid-casrai-2015.org/">ORCID CASRAI Outreach Event</a>, feel free to drop in and out to attend event sessions.</p>
+          <div class="button-container">
+            <a href="#" data-section="when" class="custom-button">Read more</a>
+          </div>
     </div>
+
   </div>
 
-
-  <!-- WHEN SECTION -->
-  <div id="when" class="section pad-section">
+  <div id="when">
     <div class="container">
       <h2 class="text-center">When</h2>
       <div class="row">
@@ -84,16 +83,17 @@
     </div>
   </div>
 
-  <div id="schedule" class="pad-section">
+  <div id="schedule">
       <div class="container">
       <h2 class="text-center white">schedule</h2>
       <hr class="wow fadeIn"/>
-      <div class="row text-center">
-        <div class="col-sm-4 col-xs-8">
+      
+      <div class="row">
+        <div class="col-sm-4 col-xs-12">
           <table class="table wow slideInLeft">
             <thead>
               <tr>
-                <td class="col-sm-4 col-xs-8">May 18rd</td>
+                <td colspan="2">May 18th</td>
               </tr>
             </thead>
             <tbody>
@@ -120,11 +120,11 @@
             </tbody>
           </table>
         </div>
-        <div class="col-sm-4 col-xs-8">
+        <div class="col-sm-4 col-xs-12">
           <table class="table wow slideInRight">
             <thead>
               <tr>
-                <td class="col-sm-4 col-xs-8">May 19th</td>
+                <td colspan="2">May 19th</td>
               </tr>
             </thead>
             <tbody>
@@ -151,11 +151,11 @@
             </tbody>
           </table>
         </div>
-        <div class="col-sm-4 col-xs-8">
+        <div class="col-sm-4 col-xs-12">
           <table class="table wow slideInRight">
             <thead>
               <tr>
-                <td class="col-sm-4 col-xs-8">May 20th</td>
+                <td colspan="2">May 20th</td>
               </tr>
             </thead>
             <tbody>
@@ -170,16 +170,16 @@
     </div>
   </div>
   
-  <div id="where" class="section">
+  <div id="where">
     <div class="title">
-      <h2 class="blue">where</h2>
+      <h2 class="blue text-center">where</h2>
     </div>
     <div id="map"></div>
   </div>
 
-  <div id="why" class="pad-section">
-    <h2 class="text-center white">why</h2>
+  <div id="why">
     <div class="container">
+      <h2 class="text-center white">why</h2>
       <div class="row text-center">
         <div class="col-sm-12">
           <p class="wow slideInRight">
@@ -190,9 +190,9 @@
     </div>
   </div>
   
-  <div id="who" class="pad-section section">
-    <h2 class="text-center white">who</h2>
+  <div id="who">
     <div class="container">
+        <h2 class="text-center white">who</h2>
         <div class="row text-center">
           <div class="col-sm-12">
             <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you.</p>
@@ -236,12 +236,12 @@
     </div>
   </div>
   
-  <div id="sponsors" class="pad-section section">
-    <h2 class="text-center blue">Sponsor</h2>
+  <div id="sponsors">
     <div class="container">
+      <h2 class="text-center blue">Sponsors</h2>
       <div class="rowtext-center">
         <div class="col-sm-12">
-          Sponsor logos...
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
         </div>
       </div>
     </div>
@@ -250,9 +250,8 @@
   
   
   <footer>
-    <hr />
     <div class="container">
-      <p class="text-right">Copyright &copy; ORCID CASERAI 2015</p>
+      <p class="text-right">Copyright &copy; ORCID CASRAI 2015</p>
     </div>
   </footer>
  
