Small fixes for the mobile view

--- a/index.html
+++ b/index.html
@@ -57,31 +57,31 @@
     <div class="container">
       <h2 class="text-center">When</h2>
       <div class="row">
-          <div class="col-sm-12 col-xs-12">
-              <div class="dates">
-                <div class="date wow flipInX">
-                    <div class="month">
-                      MAY
-                    </div>
-                    <div class="day">
-                      18
-                    </div>
-                </div>
-                <div class="date wow flipInX">
-                    <div class="month">
-                      MAY
-                    </div>
-                    <div class="day">
-                      19
-                    </div>
-                </div> 
-              </div>
-            </div>
+          <div class="col-sm-6 col-xs-12">              
+              <div class="date wow flipInX first-date">
+                  <div class="month">
+                    MAY
+                  </div>
+                  <div class="day">
+                    18
+                  </div>
+              </div>                            
           </div>
+          <div class="col-sm-6 col-xs-12">
+            <div class="date wow flipInX second-date">
+                <div class="month">
+                  MAY
+                </div>
+                <div class="day">
+                  19
+                </div>
+            </div> 
+          </div>
+
       </div>
       <h4 class="text-center">Awards announced the 20th at Outreach Event.</h4>
-    </div>
   </div>
+  
 
   <div id="schedule">
       <div class="container">
@@ -228,6 +228,15 @@
                 <td>rcpeters</td>
                 <td>CVS file to ORCID iD creation. Any language.</td>
               </tr>
+              <!-- Add your info below -->
+              <!--
+              <tr>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+              </tr>
+              -->
             </tbody>
           </table>
           </div>
