--- a/index.html
+++ b/index.html
@@ -180,11 +180,21 @@
   <div id="why">
     <div class="container">
       <h2 class="text-center white">why</h2>
-      <div class="row text-center">
+      <div class="row">
         <div class="col-sm-12">
           <p class="wow slideInRight">
-           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
-           </p>
+            Glory! No, just kidding!...<br />
+            You believe software and data interoperability is essential in furthering research and affecting positive outcomes for research. Both open dictionaries and open identifiers are critical pieces to solving the interoperability issues faced by systems that enable the research and scholarly communication ecosystem. <br />
+    		<br />
+	    	Codefest also are not just about deliverables, it’s one of the few times coders can socialize, learn about new ideas and new tools. <br />
+	    	<br />
+	    	Awards (ok maybe a little bit of glory):</br >
+            <ul class="wow slideInLeft">
+        	    <li>CASRAI - Awards to the best project that experiments with real use cases of automated machine-to-machine, API-based interoperability with Casrai Profile instances as 'payloads'. Examples might include funder-to-institutional cases like announcing funding results or institution-to-funder cases like submitting CV data to an application process or publisher-to-publisher cases like exchanging peer-review data. We intend to play with JSON and/or XML and to feed back to the Casrai Tech Advisory Group on lessons learned and opportunities discovered.</li>
+                <li>ORCID - Sometimes organizations don’t have technical resources to interact with ORCID’s APIs directly. What tools can we create to enable these users to mint and manage ORCID record through administrative configuration, file uploads, or web-based services? These awards will go to the best project that address this need.</li>
+                <li>OPEN - You have an idea that doesn’t quite fit in either category? Well we are not going to get in the way of serendipity. Show up and code away! There will be awards to the best overall project.</li>
+            </ul>
+          </p>
         </div>
       </div>
     </div>
