add link back to conference

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand">LET'S CODE!</span>
+        <a href="#" class="navbar-brand">LET'S CODE!</a>
+        <a href="http://www.orcid-casrai-2015.org/" class="navbar-brand">LET'S CONFERENCE!</a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-main">
