add other participants

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
         <h2 class="text-center white">who</h2>
         <div class="row text-center">
           <div class="col-sm-12">
-            <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you.</p>
+            <p class="white wow slideInLeft">Add your Github username, name or pseudo name with a pull request or email r.peters@orcid.org and he’ll add it for you.
+            Add an asterix (*) if participating remotely.</p>
           </div>
         </div>
         <div class="row">
@@ -212,22 +213,52 @@
             </thead>
             <tbody>
               <tr>
-                <td>Liz Krznarich</td>
-                <td>Member Services Associate ORCID</td>
-                <td>lizkrznarich</td>
+                <td>Angle Montenegro *</td>
+                <td>Sr Software Engineer ORCID</td>
+                <td>amontenegro</td>
+                <td>Collaborating remotely. Java, Python and all things web.</td>
+              </tr>
+              <tr>
+                <td>David Baker</td>
+                <td>Executive Director CASRAI</td>
+                <td></td>
                 <td></td>
               </tr>
               <tr>
+                <td>Fran Ramírez Monge *</td>
+                <td>Sr Software Frontend Engineer ORCID</td>
+                <td>hexplus</td>
+                <td>Collaborating remotely. HTML, JavaScript, CSS and Bootstrap and all things web.</td>
+              </tr>
+              <tr>
                 <td>Laura Paglione</td>
-                <td>Director of Technology</td>
+                <td>Director of Technology ORCID</td>
                 <td>lpaglione</td>
                 <td></td>
+              </tr>
+              <tr>
+                <td>Liz Krznarich</td>
+                <td>Member Services Associate ORCID</td>
+                <td>lizkrznarich</td>
+                <td>PHP, HTML and willing to hack in any other langauge</td>
               </tr>
               <tr>
                 <td>Robert Peters</td>
                 <td>Lead Developer ORCID</td>
                 <td>rcpeters</td>
                 <td>CVS file to ORCID iD creation. Any language.</td>
+              </tr>
+              <tr>
+                <td>Thomas Vestdam</td>
+                <td>Head of Product Technology</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Will Simpson *</td>
+                <td>Software Architect ORCID</td>
+                <td>wjrsimpson</td>
+                <td>Collaborating remotely. Java, python and all things web.</td>
               </tr>
               <!-- Add your info below -->
               <!--
