--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>Angle Montenegro *</td>
+                <td>Angel Montenegro *</td>
                 <td>Sr Software Engineer ORCID</td>
                 <td>amontenegro</td>
                 <td>Collaborating remotely. Java, Python and all things web.</td>
