add Elsevier to Thomas

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               </tr>
               <tr>
                 <td>Thomas Vestdam</td>
-                <td>Head of Product Technology</td>
+                <td>Head of Product Technology Elsevier</td>
                 <td></td>
                 <td></td>
               </tr>
