Several improvements, added lazy loading for the second background image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href="#" data-section="where">Where</a></li>
           <li><a href="#" data-section="why">Why</a></li>
           <li><a href="#" data-section="who">Who</a></li>
+          <li><a href="#" data-section="sponsors">Sponsors</a></li>
           <li><a href="https://github.com/ORCID-CASRAI-2015" target="_blank" data-section="git">Git Repo</a></li>
         </ul>
       </div>
@@ -54,108 +55,111 @@
   </div>
 
   <div id="when">
-    <div class="container">
-      <h2 class="text-center">When</h2>
-      <div class="row">
-          <div class="col-sm-6 col-xs-12">              
-              <div class="date wow flipInX first-date">
+    <div id="dates">
+      <div class="container">
+        <h2 class="text-center">When</h2>
+        <div class="row">
+            <div class="col-sm-6 col-xs-12">              
+                <div class="date wow flipInX first-date">
+                    <div class="month">
+                      MAY
+                    </div>
+                    <div class="day">
+                      18
+                    </div>
+                </div>                            
+            </div>
+            <div class="col-sm-6 col-xs-12">
+              <div class="date wow flipInX second-date">
                   <div class="month">
                     MAY
                   </div>
                   <div class="day">
-                    18
+                    19
                   </div>
-              </div>                            
-          </div>
-          <div class="col-sm-6 col-xs-12">
-            <div class="date wow flipInX second-date">
-                <div class="month">
-                  MAY
-                </div>
-                <div class="day">
-                  19
-                </div>
-            </div> 
-          </div>
-      </div>
-  </div>
-  
-
-  <div id="schedule">
-      <div class="container">
-      <h2 class="text-center white">schedule</h2>
-      <hr class="wow fadeIn"/>
-      
-      <div class="row">
-        <div class="col-sm-6 col-xs-18">
-          <table class="table wow slideInLeft">
-            <thead>
-              <tr>
-                <td colspan="2">May 18th</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>11:00</td>
-                <td>Introductions & Welcome</td>
-              </tr>
-              <tr>
-                <td>12:00</td>
-                <td>Free lunch and time to collaborate!</td>
-              </tr>
-              <tr>
-                <td>2:00</td>
-                <td>Hopefully started coding/creating by now!</td>
-              </tr>
-              <tr>
-                <td>04:00</td>
-                <td>Cookie time.</td>
-              </tr>
-              <tr>
-                <td>06:30</td>
-                <td>Pizza Beer time!</td>
-              </tr>
-              <tr>
-                 <td>07:00</td>
-                 <td>Standup and Share</td>   
-              </tr>
-            </tbody>
-          </table>
+              </div> 
+            </div>
         </div>
-        <div class="col-sm-6 col-xs-18">
-          <table class="table wow slideInRight">
-            <thead>
-              <tr>
-                <td colspan="2">May 19th</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>8:00</td>
-                <td>Coffee and coding</td>
-              </tr>
-              <tr>
-                <td>11:00</td>
-                <td>Standup and Share</td>
-              </tr>
-              <tr>
-                <td>12:00</td>
-                <td>Lunch, yum!</td>
-              </tr>
-              <tr>
-                <td>02:00</td>
-                <td>Last push, yikes.</td>
-              </tr>
-              <tr>
-                <td>03:00</td>
-                <td>Present to Judges</td>
-              </tr>
-              <tr>
-                <td>4:00</td>
-                <td>Winners announced at conference and prizes awarded.</td>
-              </tr>
-            </tbody>
-          </table>
+      </div>
+    </div>
+  
+<!-- data-original="img/bmw_m1_hood.jpg" style="background-image: url('img/grey.gif'); -->
+    <div id="schedule" data-original="images/footer-bg.jpg" style="background-repeat: no-repeat; background-attachment: fixed; background-position: center;">
+      <div class="container">
+        <h2 class="text-center white wow fadeIn">schedule</h2>
+        <hr class="wow fadeIn"/>
+        
+        <div class="row">
+          <div class="col-sm-6 col-xs-18">
+            <table class="table">
+              <thead>
+                <tr>
+                  <td colspan="2">May 18th</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>11:00</td>
+                  <td>Introductions & Welcome</td>
+                </tr>
+                <tr>
+                  <td>12:00</td>
+                  <td>Free lunch and time to collaborate!</td>
+                </tr>
+                <tr>
+                  <td>2:00</td>
+                  <td>Hopefully started coding/creating by now!</td>
+                </tr>
+                <tr>
+                  <td>04:00</td>
+                  <td>Cookie time.</td>
+                </tr>
+                <tr>
+                  <td>06:30</td>
+                  <td>Pizza Beer time!</td>
+                </tr>
+                <tr>
+                   <td>07:00</td>
+                   <td>Standup and Share</td>   
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-sm-6 col-xs-18">
+            <table class="table">
+              <thead>
+                <tr>
+                  <td colspan="2">May 19th</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>8:00</td>
+                  <td>Coffee and coding</td>
+                </tr>
+                <tr>
+                  <td>11:00</td>
+                  <td>Standup and Share</td>
+                </tr>
+                <tr>
+                  <td>12:00</td>
+                  <td>Lunch, yum!</td>
+                </tr>
+                <tr>
+                  <td>02:00</td>
+                  <td>Last push, yikes.</td>
+                </tr>
+                <tr>
+                  <td>03:00</td>
+                  <td>Present to Judges</td>
+                </tr>
+                <tr>
+                  <td>4:00</td>
+                  <td>Winners announced at conference and prizes awarded.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
@@ -240,7 +244,7 @@
                 <td>Liz Krznarich</td>
                 <td>Member Services Associate ORCID</td>
                 <td>lizkrznarich</td>
-                <td>PHP, HTML and willing to hack in any other langauge</td>
+                <td>PHP, HTML and willing to hack in any other language</td>
               </tr>
               <tr>
                 <td>Robert Peters</td>
@@ -303,6 +307,7 @@
   </footer>
  
   <script src="js/jquery-1.10.2.js"></script>
+  <script src="js/jquery.lazyload.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <script src="js/wow.min.js"></script>
