Adding Evenbrite widget

--- a/index.html
+++ b/index.html
@@ -34,24 +34,29 @@
           <li><a href="#" data-section="why">Why</a></li>
           <li><a href="#" data-section="who">Who</a></li>
           <li><a href="#" data-section="sponsors">Sponsors</a></li>
-          <li><a href="https://github.com/ORCID-CASRAI-2015" target="_blank" data-section="git">Git Repo</a></li>
+          <li><a href="https://www.eventbrite.com/e/orcid-casrai-joint-conference-codefest-may-2015-tickets-15823611849" target="_blank">Register!</a></li>
+          <li><a href="https://github.com/ORCID-CASRAI-2015" target="_blank">Git Repo</a></li>          
         </ul>
       </div>
-
     </div>
   </nav>
 
-  <div id="home">
-    
+  <div id="register" class="hidden-xs">
+    <iframe  src="https://www.eventbrite.com/countdown-widget?eid=15823611849" frameborder="0" height="291" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe>    
+  </div>
+
+  <div id="home">    
     <div class="centered">
       <h1>ORCID <span class="orange">CASRAI</span><br /><span class="orange">2015</span> Codefest <br />Barcelona, Spain</h1>
-          <p class="wow slideInRight">
-          Runs during the <a href="http://orcid-casrai-2015.org/">ORCID CASRAI Outreach Event</a>, feel free to drop in and out to attend event sessions.</p>
-          <div class="button-container">
-            <a href="#" data-section="when" class="custom-button">Read more</a>
-          </div>
+      <p class="wow slideInRight">
+      Runs during the <a href="http://orcid-casrai-2015.org/">ORCID CASRAI Outreach Event</a>, feel free to drop in and out to attend event sessions.</p>
+      <div class="button-container">
+         <a href="#" data-section="when" class="custom-button">Read more</a>         
+      </div>
+      <div class="button-container">
+        <a href="https://www.eventbrite.com/e/orcid-casrai-joint-conference-codefest-may-2015-tickets-15823611849" class="custom-button hidden-sm hidden-md hidden-lg" target="_blank">Register now!</a>
+      </div>
     </div>
-
   </div>
 
   <div id="when">
@@ -79,11 +84,11 @@
                   </div>
               </div> 
             </div>
-        </div>
+        </div>        
       </div>
     </div>
   
-<!-- data-original="img/bmw_m1_hood.jpg" style="background-image: url('img/grey.gif'); -->
+
     <div id="schedule" data-original="images/footer-bg.jpg" style="background-repeat: no-repeat; background-attachment: fixed; background-position: center;">
       <div class="container">
         <h2 class="text-center white wow fadeIn">schedule</h2>
@@ -274,7 +279,7 @@
               </tr>
               -->
             </tbody>
-          </table>
+          </table>          
           </div>
         </div>
       </div>
