Attending the Codefest remotely

--- a/index.html
+++ b/index.html
@@ -283,6 +283,12 @@
                 <td>Software Architect ORCID</td>
                 <td>wjrsimpson</td>
                 <td>Collaborating remotely. Java, python and all things web.</td>
+              </tr>              
+              <tr>
+                <td>Dan Smith *</td>
+                <td>Partner @ Colectica</td>
+                <td>dansmith</td>
+                <td>Working with statistical data formats, using C# most of the time</td>
               </tr>
               <!-- Add your info below -->
               <!--
