Add row to Codefest WHO table

--- a/index.html
+++ b/index.html
@@ -290,6 +290,12 @@
                 <td>dansmith</td>
                 <td>Working with statistical data formats, using C# most of the time</td>
               </tr>
+              <tr>
+                <td>Jeremy Iverson</td>
+                <td>Partner, Colectica</td>
+                <td>jeremyiverson</td>
+                <td> </td>
+              </tr>
               <!-- Add your info below -->
               <!--
               <tr>
